[package]
name = "llama-server"
version = "0.1.0"
authors = ["Swarnim Arun <mail@swarnimarun.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hf-hub = "0.3"
clap = { version = "4.5", features = ["derive", "string", "env"] }
anyhow = "1.0.82"
