[package]
name = "llama-server"
version = "0.2.0"
authors = ["Swarnim Arun <mail@swarnimarun.com>"]
edition = "2021"

[[bin]]
name = "llama-server"
path = "src/main.rs"

[dependencies]
hf-hub = "0.3"
clap = { version = "4.5", features = ["derive", "string", "env"] }
anyhow = "1.0.82"
ctrlc = "3.4.4"
